nav bar spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header {
 nav {
     display: flex;
     list-style-type: none;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;
     background-color: #333;
 }
